<resources>
    <string name="app_name">Lab 5 - Pablo Zamora</string>
    <string name="week_day">Miércoles</string>
    <string name="date">18 de mayo</string>
    <string name="end_day">Terminar jornada</string>
    <string name="fav_restaurant">Buta Ramen</string>
    <string name="fav_restaurant_address">La Estación, 16 Calle 7-17, zona 10</string>
    <string name="fav_restaurant_attention_hours">10:00 AM - 9:00 PM</string>
    <string name="start">Iniciar</string>
    <string name="details">Detalles</string>
    <string name="update_available">Actualización disponible</string>
    <string name="download_update">Descargar</string>
    <string name="additional_info">Información adicional</string>
    <string name="office_hours">Horario de atención</string>
    <string name="phone_number">Teléfono</string>
    <string name="fav_restaurant_phone_num">4058 7520</string>
    <string name="call">Llamar</string>
    <string name="start_visit">Iniciar visita</string>
</resources>